opam-version: "2.0"
name: "bexp"
version: "0.1"
synopsis: "Visual language syntax library"
description: """
Library for making block-based languages
"""
maintainer: "Types Logics Cats TheAspiringHacker@protonmail.com"
authors: "Types Logics Cats TheAspiringHacker@protonmail.com"
license: "MPL-2.0"
homepage: "https://gitlab.com/emmeline/bexp"
bug-reports: "https://gitlab.com/emmeline/bexp/issues"
dev-repo: "git://gitlab.com/emmeline/bexp.git"
depends: [
  "core_kernel" {>= "0.12.0"}
  "dune" {build & >= "1.6.0"}
  "js_of_ocaml" {>= "3.4.0"}
  "js_of_ocaml-ppx" {>= "3.4.0"}
]
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
]
