opam-version: "2.0"
name: "bexp_dsl"
version: "0.1"
synopsis: "Grammar DSL for Bexp"
description: """
Grammar DSL for Bexp
"""
maintainer: "Types Logics Cats TheAspiringHacker@protonmail.com"
authors: "Types Logics Cats TheAspiringHacker@protonmail.com"
license: "MPL-2.0"
homepage: "https://gitlab.com/emmeline/bexp"
bug-reports: "https://gitlab.com/emmeline/bexp/issues"
dev-repo: "git://gitlab.com/emmeline/bexp.git"
depends: [
  "base" {>= "v0.12.0"}
  "dune" {build & >= "1.6.0"}
  "menhir" {>= "20181113"}
  "stdio" {>= "v0.12.0"}
]
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
]
