opam-version: "2.0"
name: "ppx_bexp"
version: "0.1"
synopsis: "PPX helper for Bexp"
description: """
PPX helper for Bexp
"""
maintainer: "Types Logics Cats TheAspiringHacker@protonmail.com"
authors: "Types Logics Cats TheAspiringHacker@protonmail.com"
license: "MPL-2.0"
homepage: "https://gitlab.com/emmeline/bexp"
bug-reports: "https://gitlab.com/emmeline/bexp/issues"
dev-repo: "git://gitlab.com/emmeline/bexp.git"
depends: [
  "base" {>= "v0.12.0"}
  "bexp"
  "dune" {build & >= "1.6.0"}
  "ppxlib" {>= "0.5.0" & < "0.9.0"}
]
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
]
